--- a/client/app/index.html
+++ b/client/app/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
     </head>
-    <body ng-app="clientApp">
+    <body ng-app="HrmApp">
         <!--[if lte IE 8]>
           <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -40,8 +40,9 @@
 
                         <ul class="nav navbar-nav">
                             <li class="active"><a href="#/">Home</a></li>
-                            <li><a ng-href="#/about">About</a></li>
-                            <li><a ng-href="#/">Contact</a></li>
+                            <li><a ng-href="#!/about">About</a></li>
+                            <li><a ng-href="#!/login">Login</a></li>
+                            <li><a ng-href="#!/signup">Sign Up</a></li>
                         </ul>
                     </div>
                 </div>
